--- a/client/src/Components/MainHome/MainHome.css
+++ b/client/src/Components/MainHome/MainHome.css
@@ -1,24 +1,21 @@
-.main__backgroundimage {
-  width: 100%;
-  height: 88vh;
+.carousel-caption {
+  bottom: 40vw;
 }
 
-.main__textContainer {
-  position: absolute;
-  color: white;
-  width: 40vw;
-  margin: 12vh 0 0 3rem;
-}
-
-.main__title {
-  margin-bottom: 1.5rem;
-}
-
-@media (max-width: 769px) {
-  .main__backgroundimage {
-    height: 80vw;
+@media (max-width: 768px) {
+  .carousel-caption {
+    bottom: 33vw;
   }
-  .main__textContainer {
-    margin: 5vh 0 0 3rem;
+  .carousel-caption-last {
+    bottom: 28vw;
+  }
+}
+
+@media (max-width: 480px) {
+  .carousel-caption {
+    bottom: 29vw;
+  }
+  .carousel-caption-last {
+    bottom: 20vw;
   }
 }
