--- a/client/src/Components/AboutUs/AboutUs.css
+++ b/client/src/Components/AboutUs/AboutUs.css
@@ -1,11 +1,11 @@
-.aboutUs__img__container {
+/* .aboutUs__img__container {
   height: 100vh;
   background: url('../../Assets/Images/about-img.png');
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center;
   background-size: cover;
-}
+} */
 
 .aboutUs__row {
   align-items: center;
