--- a/client/src/Components/CardCuponHome/CardCuponHome.css
+++ b/client/src/Components/CardCuponHome/CardCuponHome.css
@@ -13,7 +13,7 @@
   padding: 1.5rem;
 }
 
-.card-img-top {
+.card__img__top {
   width: 34%;
   border: 3px solid var(--brand-color);
   border-radius: 50%;
@@ -43,7 +43,7 @@
 }
 
 @media (max-width: 1200px) {
-  .card-img-top {
+  .card__img__top {
     top: 1rem;
   }
 }
@@ -53,7 +53,7 @@
     left: 2.5rem;
   }
 
-  .card-img-top {
+  .card__img__top {
     width: 35%;
   }
 }
@@ -82,7 +82,7 @@
     right: 1rem;
   }
 
-  .card-img-top {
+  .card__img__top {
     top: 1rem;
   }
 }
@@ -99,7 +99,7 @@
     width: 70%;
   }
 
-  .card-img-top {
+  .card__img__top {
     top: 0.7rem;
   }
 }
@@ -117,7 +117,7 @@
     width: 87%;
     height: 10rem;
   }
-  .card-img-top {
+  .card__img__top {
     width: 42%;
     top: 0.4rem;
   }
