--- a/client/src/Components/FiltersMenu/FiltersMenu.css
+++ b/client/src/Components/FiltersMenu/FiltersMenu.css
@@ -9,7 +9,10 @@
   background-color: var(--main-color-dark);
   color: var(--main-color-light);
 }
-
+.activeBtn {
+  background-color: var(--main-color-dark);
+  color: var(--main-color-light);
+}
 .select__order {
   border-radius: 20px;
   height: 35px;
