--- a/client/src/Components/User/UserLogin/UserLogin.css
+++ b/client/src/Components/User/UserLogin/UserLogin.css
@@ -13,7 +13,9 @@
 .userLogin__img {
   max-width: 50%;
 }
-
+.userLogin__imgLogo {
+  max-width: 50px;
+}
 .userLogin__divider {
   color: rgb(170, 170, 170);
   margin: 1.5rem;
@@ -22,4 +24,27 @@
   display: flex;
   flex-direction: row-reverse;
   align-items: center;
+}
+
+.userLogin__forgotPass {
+  color: gray;
+  border: unset;
+  background: unset;
+  box-shadow: unset;
+}
+
+.userLogin__forgotPass:hover {
+  color: gray;
+  border-color: transparent;
+  background: unset;
+  box-shadow: unset;
+  text-decoration: underline;
+}
+
+.userLogin__forgotPass:focus {
+  color: gray;
+  border-color: transparent;
+  background: unset;
+  box-shadow: unset;
+  text-decoration: unset;
 }
