Refactor(UI-AddBurger)

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -397,3 +397,12 @@ p {
   font-family: 'Open Sans', sans-serif;
   font-size: 1rem;
 }
+
+.swal2-styled.swal2-confirm {
+  border: 0;
+  border-radius: 50px;
+  background: initial;
+  background-color: var(--brand-color);
+  color: #fff;
+  font-size: 1em;
+}
