--- a/client/src/Components/AddBurger/AddBurger.css
+++ b/client/src/Components/AddBurger/AddBurger.css
@@ -16,7 +16,7 @@
 .addBurger__select {
   width: 100%;
   min-width: 35vw;
-  border: 1px solid black;
+  border: var(--bc-inputs);
   border-radius: 18px;
   padding: 0.25em 0.5em;
   font-size: 1.25rem;
@@ -42,7 +42,7 @@
 .addBurger__image {
   width: 500px;
   height: 290px;
-  background-image: url('../../Assets/Images/Hamburguesas/Doble-Jamon-y-Queso-XL.png');
+  background-image: url('../../Assets/Images/Hamburguesas/Hamburguesa-con-Queso.png');
   background-repeat: no-repeat;
   z-index: 1;
   background-size: cover;
@@ -54,25 +54,26 @@
   margin: 0;
   padding: 0;
   display: grid;
+  justify-items: center;
+  align-items: center;
   grid-template-columns: repeat(2, 1fr);
   grid-column-gap: 0px;
   grid-row-gap: 0px;
-  border: 1px solid var(--main-color-dark);
+  border: var(--bc-inputs);
   border-radius: 18px;
   min-height: 200px;
 }
 
 .addBurger__ul__liContainer {
   margin: 0.5rem;
-  /* border: 1px solid black; */
   background-color: var(--main-color-dark);
   color: var(--text-color-light);
   border-radius: 18px;
   width: 13rem;
   height: 4.5rem;
-  box-shadow: 2px 5px 5px 0px rgba(0, 0, 0, 0.6);
-  -webkit-box-shadow: 2px 5px 5px 0px rgba(0, 0, 0, 0.6);
-  -moz-box-shadow: 2px 5px 5px 0px rgba(0, 0, 0, 0.6);
+  box-shadow: var(--bs-card);
+  -webkit-box-shadow: var(--bs-card);
+  -moz-box-shadow: var(--bs-card);
 }
 
 .addBurger__ul__li {
@@ -85,10 +86,8 @@
 .addBurger__ul__closeButton {
   background-color: transparent;
   float: right;
-  /* border-radius: 19px; */
   border: none;
   position: relative;
-  /* left: -3px; */
   color: var(--main-color-dark);
 }
 
@@ -122,27 +121,24 @@
   margin: 4rem auto;
 }
 
-.addBurger__bottom__button {
-  color: var(--text-color-light);
-  background-color: var(--brand-color);
-  border-radius: 18px;
-  border: none;
-  padding: 0.5rem;
-  box-shadow: 2px 5px 5px 0px rgba(0, 0, 0, 0.6);
-  -webkit-box-shadow: 2px 5px 5px 0px rgba(0, 0, 0, 0.6);
-  -moz-box-shadow: 2px 5px 5px 0px rgba(0, 0, 0, 0.6);
-}
-
-.addBurger__bottom__button:hover {
-  -webkit-transform: scale(1.1);
-  -moz-transform: scale(1.1);
-  -ms-transform: scale(1.1);
-  -o-transform: scale(1.1);
-  transform: scale(1.1);
+.addBurger__bottom__span {
+  font-weight: 600;
+  font-size: 1.2rem;
+  color: grey;
 }
 
 .addBurger__ul__cantidad {
   margin: 0.5rem;
+}
+.swal2-styled.swal2-confirm {
+  gap: 5px;
+  border-color: var(--brand-color);
+  background: var(--brand-color);
+  box-shadow: var(--bs-btn);
+  border-radius: var(--br-btn);
+}
+.swal2-styled.swal2-confirm:focus {
+  box-shadow: var(--bs-btn);
 }
 
 @media (max-width: 1024px) {
