--- a/client/src/Components/ProductDetail/ProductDetail.css
+++ b/client/src/Components/ProductDetail/ProductDetail.css
@@ -23,3 +23,14 @@
 .productDetail__link__Svg {
   color: var(--brand-color);
 }
+
+.productDetail__map__container {
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+  background-color: var(--main-color-light);
+  padding: 1rem;
+  border-radius: 20px;
+  max-width: 500px;
+  box-shadow: var(--bs-card);
+}
