--- a/client/src/Components/Menu/Menu.css
+++ b/client/src/Components/Menu/Menu.css
@@ -5,7 +5,7 @@
   align-items: center;
 }
 
-.btn__round__effect {
+.btn__round__effect, .btn__round__effect  {
   color: var(--main-color-light);
   cursor: pointer;
   padding-left: 10px;
@@ -23,14 +23,20 @@
   color: #fff;
 }
 
-.btn__round__effect.active {
-  text-decoration: none;
-  background: var(--btn-hover);
-  color: #fff;
+.currentPag, .currentPag:focus{
+    background-color: var(--main-color-dark);
+    color: var(--main-color-white);
+    border: solid 1px grey;
 }
 
-.btn__round__effect.disabled {
+.disablePag, .disablePag:focus {
     text-decoration: none;
     background: grey;
     color: #fff;
-  }
+    border: solid 1px grey;
+    cursor: default;
+}
+
+.disablePag:hover {
+    cursor: default;
+}
