Refactor(ContactForm y Menu paginado)

--- a/client/src/Components/ContactForm/ContactForm.css
+++ b/client/src/Components/ContactForm/ContactForm.css
@@ -21,3 +21,13 @@
   font-size: x-small;
   font-style: italic;
 }
+
+.btn.disabled,
+.btn:disabled,
+fieldset:disabled .btn {
+  text-decoration: none;
+  background: var(--btn-hover);
+  color: gray;
+  border: var(--btn-hover);
+  cursor: default;
+}
