--- a/client/src/Components/Menu/Menu.css
+++ b/client/src/Components/Menu/Menu.css
@@ -5,7 +5,8 @@
   align-items: center;
 }
 
-.btn__round__effect, .btn__round__effect  {
+.btn__round__effect,
+.btn__round__effect {
   color: var(--main-color-light);
   cursor: pointer;
   padding-left: 10px;
@@ -23,20 +24,22 @@
   color: #fff;
 }
 
-.currentPag, .currentPag:focus{
-    background-color: var(--main-color-dark);
-    color: var(--main-color-white);
-    border: solid 1px grey;
+.currentPag,
+.currentPag:focus {
+  background-color: transparent;
+  color: var(--brand-color);
+  border: 2px solid var(--brand-color);
 }
 
-.disablePag, .disablePag:focus {
-    text-decoration: none;
-    background: grey;
-    color: #fff;
-    border: solid 1px grey;
-    cursor: default;
+.disablePag,
+.disablePag:focus {
+  text-decoration: none;
+  background: var(--btn-hover);
+  color: #57400f;
+  border: var(--btn-hover);
+  cursor: default;
 }
 
 .disablePag:hover {
-    cursor: default;
+  cursor: default;
 }
