HotFix(NavBar, UserLoggedIn)

--- a/client/src/Components/User/UserLoggedIn/UserLoggedInDropdown.css
+++ b/client/src/Components/User/UserLoggedIn/UserLoggedInDropdown.css
@@ -13,3 +13,10 @@
 .loggedIn__Link:hover {
   color: var(--brand-color);
 }
+
+.loggedIn__img__profile {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  margin-right: 7px;
+}
