--- a/client/src/index.css
+++ b/client/src/index.css
@@ -398,12 +398,13 @@ p {
   font-family: 'Open Sans', sans-serif;
   font-size: 1rem;
 }
-
-.swal2-styled.swal2-confirm {
-  border: 0;
-  border-radius: 50px;
-  background: initial;
-  background-color: var(--brand-color);
-  color: #fff;
-  font-size: 1em;
+.swal2-styled.swal2-confirm.confirmBtnSwal {
+  gap: 5px;
+  border-color: var(--brand-color);
+  background: var(--brand-color);
+  box-shadow: var(--bs-btn);
+  border-radius: var(--br-btn);
+}
+.swal2-styled.swal2-confirm.confirmBtnSwal:focus {
+  box-shadow: var(--bs-btn);
 }
