--- a/client/src/Components/CardProductHome/CardProductHome.css
+++ b/client/src/Components/CardProductHome/CardProductHome.css
@@ -12,7 +12,6 @@
 
 .cardProductHome__img__container {
   background-color: var(--text-color-light);
-  min-height: 250px;
   display: flex;
   justify-content: center;
   margin-bottom: 15px;
@@ -28,7 +27,7 @@
 
 .cardProductHome__img {
   display: block;
-  max-width: 300px;
+  max-width: 15rem;
   min-height: 200px;
   height: auto;
 }
@@ -65,4 +64,5 @@
 
 .cardProductsHome__tittle {
   color: var(--main-color-light);
+  padding-top: 2rem;
 }
