--- a/client/src/Components/NavBar/NavBar.css
+++ b/client/src/Components/NavBar/NavBar.css
@@ -24,7 +24,7 @@
 }
 
 .linkActive {
-    color: var(--brand-color);
+  color: var(--brand-color);
 }
 
 .nav-link:hover {
@@ -87,4 +87,15 @@
 
 .CartCheckFill {
   color: var(--brand-color);
+}
+
+.cart__fill__items {
+  border-radius: 50%;
+  display: inline-block;
+  font-size: 12px;
+  font-weight: bold;
+  width: 1.2rem;
+  height: 1.2rem;
+  background-color: red;
+  color: white;
 }
