--- a/client/src/Components/User/UserLoggedIn/UserLoggedInDropdown.css
+++ b/client/src/Components/User/UserLoggedIn/UserLoggedInDropdown.css
@@ -20,3 +20,8 @@
   border-radius: 50%;
   margin-right: 7px;
 }
+
+.userLoggedIn__panelAdminBtn {
+  box-shadow: var(--bs-btn);
+  border-radius: 15px;
+}
