--- a/client/src/index.css
+++ b/client/src/index.css
@@ -361,6 +361,7 @@ template {
   --text-color-light: #ffffff;
   --text-color-dark: #1c1c1c;
   --brand-color: #ffbe33;
+  --main-color-admin-dark: #6c757d;
 
   /* HOVERS */
   --btn-hover: #835f14;
