--- a/client/src/Components/ReviewsContainer/ReviewsContainer.css
+++ b/client/src/Components/ReviewsContainer/ReviewsContainer.css
@@ -1,5 +1,5 @@
-.carousel-indicators {
+/* .carousel-indicators {
   border: 1px solid #222831;
   border-radius: 18px;
   background-color: #222831;
-}
+} */
