--- a/client/src/Components/User/UserProfileDashboard/UserProfile.css
+++ b/client/src/Components/User/UserProfileDashboard/UserProfile.css
@@ -1,20 +1,18 @@
 .mainTitle__profile {
-  display: block;
   text-align: center;
-  margin: 4rem auto;
 }
 
 .profile__mainCard {
-  background-color: #222831;
-  border-radius: 20px;
+  background-color: var(--main-color-dark);
+  border-radius: var(--br-card);
   border: none;
-  width: 22rem;
+  width: 20rem;
   margin: 2rem auto;
   border-radius: 1rem;
   border-radius: 20px;
-  box-shadow: 2px 5px 5px 0px rgba(0, 0, 0, 0.6);
-  -webkit-box-shadow: 2px 5px 5px 0px rgba(0, 0, 0, 0.6);
-  -moz-box-shadow: 2px 5px 5px 0px rgba(0, 0, 0, 0.6);
+  box-shadow: var(--bs-card);
+  -webkit-box-shadow: var(--bs-card);
+  -moz-box-shadow: var(--bs-card);
 }
 
 .profile__mainCard__headerContainer {
@@ -23,7 +21,7 @@
 }
 
 .profile__mainCard__title {
-  color: #222831;
+  color: var(--main-color-dark);
   background-color: #f1f2f3;
   width: 100%;
   height: 8rem;
@@ -36,7 +34,7 @@
   height: 120px;
   border-radius: 100%;
   margin: 1rem auto 0.5rem;
-  color: #222831;
+  color: var(--main-color-dark);
 }
 
 .profile__mainCard__title:first-child {
@@ -61,12 +59,12 @@
 }
 
 .card__profileInfo__body {
-  background-color: #222831;
-  color: white;
+  background-color: var(--main-color-dark);
+  color: var(--main-color-light);
 }
 
 .profile__infoCard__headerContainer {
-  background-color: #222831;
+  background-color: var(--main-color-dark);
   border-radius: 18px 18px 0 0;
 }
 
@@ -75,25 +73,25 @@
 }
 
 .profile__infoCard__title {
-  color: #222831;
-  background-color: #f1f2f3;
+  color: var(--main-color-dark);
+  background-color: var(--main-color-light);
   width: 100%;
   height: 8rem;
 }
 
 .profile__infoCard__body {
-  background-color: #222831;
-  color: #ffbe33;
+  background-color: var(--main-color-dark);
+  color: var(--brand-color);
 }
 
 .profile__infoCard {
   width: 17rem;
-  border-radius: 1rem;
+  border-radius: var(--br-card);
   border-radius: 20px;
   margin: 2.5vh;
-  box-shadow: 2px 5px 5px 0px rgba(0, 0, 0, 0.6);
-  -webkit-box-shadow: 2px 5px 5px 0px rgba(0, 0, 0, 0.6);
-  -moz-box-shadow: 2px 5px 5px 0px rgba(0, 0, 0, 0.6);
+  box-shadow: var(--bs-card);
+  -webkit-box-shadow: var(--bs-card);
+  -moz-box-shadow: var(--bs-card);
 }
 
 .profile__infoCard__footer:last-child {
@@ -114,7 +112,7 @@
 }
 
 .profile__infoCard__arrow {
-  color: #ffbe33;
+  color: var(--brand-color);
   float: right;
 }
 
@@ -128,7 +126,6 @@
 }
 
 .profile__form {
-  width: 20rem;
   text-align: center;
   margin: 0 auto;
   color: white;
@@ -175,13 +172,6 @@
 }
 
 @media (max-width: 480px) {
-  .profile__mainCard {
-    width: 18rem;
-  }
-
-  .profile__form {
-    width: 16rem;
-  }
   .profile__mainCard:hover {
     transform: none;
   }
