--- a/client/src/index.css
+++ b/client/src/index.css
@@ -351,7 +351,7 @@ template {
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;600&family=Open+Sans:wght@300;400;500&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Lobster+Two&display=swap');
 :root {
   /* COLORS */
   --main-color-dark: #222831;
@@ -384,7 +384,7 @@ template {
 
 body {
   margin: 0;
-  font-family: 'Dancing Script', cursive;
+  font-family: 'Lobster Two', cursive;
   font-family: 'Open Sans', sans-serif;
 }
 
@@ -393,7 +393,7 @@ h2,
 h3,
 h4,
 h5 {
-  font-family: 'Dancing Script', cursive;
+  font-family: 'Lobster Two', cursive;
 }
 
 p {
