newsLetter con manejo de errors+tryCatch

--- a/client/src/Components/Footer/Footer.css
+++ b/client/src/Components/Footer/Footer.css
@@ -26,8 +26,7 @@ a svg {
 }
 
 .footer__newsletter__error {
-  color: red;
+  color: var(--brand-color);
   font-size: smaller;
-  font-style: italic;
   padding-top: 10px;
 }
