fix(userPersonalInfo)+realtime

--- a/client/src/Components/User/UserPersonalInfo/UserPersonalInfo.css
+++ b/client/src/Components/User/UserPersonalInfo/UserPersonalInfo.css
@@ -38,3 +38,12 @@
   font-style: italic;
   width: 300px;
 }
+
+.formGrid__errContainer {
+  height: 10px;
+}
+
+.formGrid__errContainer p {
+  color: red;
+  font-size: smaller;
+}
