control de errores y estilos de error userReview

--- a/client/src/Components/User/UserReview/UserReview.css
+++ b/client/src/Components/User/UserReview/UserReview.css
@@ -81,3 +81,9 @@ input[type='radio'] {
 .userReview__starsContainer__input:checked ~ label:hover {
   color: orange;
 }
+
+.userReview__error {
+  color: var(--brand-color);
+  font-size: smaller;
+  /* padding-top: 10px; */
+}
