--- a/client/src/Components/Admin/AdminUsers/AdminUsers.css
+++ b/client/src/Components/Admin/AdminUsers/AdminUsers.css
@@ -9,3 +9,22 @@
   font-size: 1rem;
   font-weight: bold;
 }
+
+.adminUsers__pagination__btn {
+  margin: 5px;
+}
+
+.adminUsers__pagination__btn:hover {
+  background-color: #6c757d;
+  border: 1px solid #6c757d;
+}
+
+.adminUsers__pagination__btn:focus {
+  background-color: #6c757d;
+  border: 1px solid #6c757d;
+}
+
+.adminUsers__pagination__btn:active {
+  background-color: #6c757d;
+  border: 1px solid #6c757d;
+}
