--- a/client/src/Components/Admin/Coupons/CouponAdmin/CouponAdmin.css
+++ b/client/src/Components/Admin/Coupons/CouponAdmin/CouponAdmin.css
@@ -1,12 +1,35 @@
-.couponForm {
+/* .couponForm {
   display: flex;
   flex-direction: column;
   max-width: 300px;
   text-align: left;
+  margin: 0 auto;
+} */
+.couponAdmin_Container {
+  margin-top: 4rem;
+  margin-bottom: 4rem;
 }
-
 .couponForm label {
   display: flex;
   flex-direction: column;
   margin: 10px 0;
+}
+
+.couponAdmin__CardCupponHome {
+  width: 26.5rem;
+  position: relative;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.couponAdmin__MainTitle {
+  margin: 1rem auto;
+}
+
+@media (max-width: 481px) {
+  .couponAdmin__CardCupponHome {
+    width: 22.5rem;
+  }
 }
