--- a/client/src/Components/Menu/Menu.css
+++ b/client/src/Components/Menu/Menu.css
@@ -11,7 +11,7 @@
   cursor: pointer;
   padding-left: 10px;
   padding-right: 10px;
-  border-radius: 50%;
+  border-radius: 20%;
   height: 40px;
   width: 40px;
   margin: 5px;
@@ -26,7 +26,7 @@
 
 .currentPag,
 .currentPag:focus {
-  background-color: transparent;
+  background-color: var(--main-color-light);
   color: var(--brand-color);
   border: 2px solid var(--brand-color);
 }
