Fix(Contact form and user register errors)

--- a/client/src/Components/ContactForm/ContactForm.css
+++ b/client/src/Components/ContactForm/ContactForm.css
@@ -6,11 +6,11 @@
   text-align: left;
 }
 .contactForm__input {
-  border-radius: 20px;
+  border-radius: 10px;
   margin: 7px;
   border: var(--bc-inputs);
   padding: 0.5rem;
-  margin-top: 20px;
+  margin-top: 10px;
 }
 .contactForm__errContainer {
   height: 10px;
@@ -19,6 +19,7 @@
 .contactForm__errContainer p {
   color: red;
   font-size: smaller;
+  font-style: italic;
 }
 
 .btn.disabled,
