--- a/client/src/Components/Admin/AddProduct/AddProductViews/FormsGlobal.css
+++ b/client/src/Components/Admin/AddProduct/AddProductViews/FormsGlobal.css
@@ -7,6 +7,7 @@
   border: 2px solid var(--main-color-light);
   border-radius: 15px;
   margin: 15px;
+  padding: 15px;
 }
 
 .editOrCreate__mainContainer {
