--- a/client/src/Components/Admin/AddProduct/ProductCardAdmin/ProductCardAdmin.css
+++ b/client/src/Components/Admin/AddProduct/ProductCardAdmin/ProductCardAdmin.css
@@ -8,13 +8,10 @@
 
 .adminProductHome__card__img {
   height: 150px;
+  border-radius: 20px 20px 0 0;
 }
 
 .adminProductHome__cardBody {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-around;
   background-color: var(--main-color-dark);
   color: var(--main-color-light);
   border-radius: 15px;
@@ -22,4 +19,10 @@
 
 .adminProductHome__cardTittle {
   font-size: 1rem;
+  padding: 10px;
+}
+
+.productCard__buttons {
+  display: flex;
+  justify-content: space-evenly;
 }
