--- a/client/src/Components/ShoppingCart/ShoppingCart.css
+++ b/client/src/Components/ShoppingCart/ShoppingCart.css
@@ -84,3 +84,19 @@
   border-radius: 10px;
   border: var(--bc-inputs);
 }
+
+.discount__shoppingCart {
+  display: flex;
+  justify-content: center;
+  margin: 5px;
+}
+
+.discount__card {
+  display: flex;
+  align-items: center;
+  font-weight: bolder;
+  color: var(--main-color-dark);
+  border: 1px solid #999999;
+  border-radius: 10px;
+  padding: 5px 10px 5px 10px;
+}
